# prophesee_ros_wrapper

./: README.md
prophesee_recorder/: CMakeLists.txt  README.md  dependencies.yaml  package.xml
prophesee_recorder/include/: prophesee_recorder.h
prophesee_recorder/launch/: stereo_record_prophesees.launch
prophesee_recorder/python_scripts/: data_loader.py
prophesee_recorder/src/: prophesee_recorder.cpp  prophesee_recorder_node.cpp
prophesee_ros_driver/: CMakeLists.txt
prophesee_ros_driver/include/prophesee_ros_driver/: cd_frame_generator.h  log_tone_mapper.h  prophesee_ros_publisher.h  prophesee_ros_viewer.h
prophesee_ros_driver/launch/: prophesee_publisher.launch  prophesee_publisher_stereo.launch  prophesee_viewer.launch
prophesee_ros_driver/src/: cd_frame_generator.cpp  prophesee_ros_publisher.cpp  prophesee_ros_viewer.cpp
