<?xml version="1.0"?>
<package format="2">
  <name>prophesee_recorder</name>
  <version>0.0.0</version>
  <description>The prophesee_recorder package</description>

  <maintainer email="daniel.gehrig18@gmail.com">Daniel Gehrig</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>prophesee_event_msgs</depend>
  <depend>cnpy_catkin</depend>
  <depend>prophesee_driver</depend>
</package>
